[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["ASX <mragungsetiaji@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
gym = "^0.21.0"
pyglet = "^1.5.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
